--- a/views/partials/home.html
+++ b/views/partials/home.html
@@ -75,6 +75,29 @@
         </div>
     </div>
 
+    <div class="mdl-cell mdl-cell--12-col mdl-cell--8-col-tablet mdl-card mdl-shadow--4dp article-card">        
+        <div class="mdl-card__supporting-text full-text">
+            <a target="_blank"  href="https://geni.us/lawsofux">
+                <img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=GB&ASIN=149205531X&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=materialdesig-21" >
+            </a>
+            <img src="//ir-uk.amazon-adsystem.com/e/ir?t=materialdesig-21&l=am2&o=2&a=149205531X" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+
+            <a target="_blank"  href="https://geni.us/learnwpfmvvm">
+                <img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=GB&ASIN=1326847996&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=materialdesig-21" >
+            </a>
+            <img src="//ir-uk.amazon-adsystem.com/e/ir?t=materialdesig-21&l=am2&o=2&a=1326847996" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />            
+            
+            <a target="_blank"  href="https://geni.us/designeverydaythings">
+                <img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=GB&ASIN=0465050654&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=materialdesig-21" >
+            </a>
+            <img src="//ir-uk.amazon-adsystem.com/e/ir?t=materialdesig-21&l=am2&o=2&a=0465050654" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+            
+            <a target="_blank"  href="https://geni.us/csharpindeep">
+                <img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=GB&ASIN=1617294535&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=materialdesig-21" >
+            </a>
+            <img src="//ir-uk.amazon-adsystem.com/e/ir?t=materialdesig-21&l=am2&o=2&a=1617294535" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+        </div>
+    </div>
 
     <div class="mdl-grid mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
         <div class="mdl-cell mdl-cell--12-col">
@@ -113,8 +136,31 @@
             <div class="mdl-card__supporting-text">
                 doobry, a SQL editor for Azure's DocumentDb NoSQL database utilises the toolkit to produce a fluid, bold, and engaging interface.
             </div>
-        </div>    
+        </div>        
     </div>    
+    <div class="mdl-cell mdl-cell--12-col mdl-cell--8-col-tablet mdl-card mdl-shadow--4dp article-card">        
+        <div class="mdl-card__supporting-text full-text">
+            <a target="_blank"  href="https://geni.us/csharpnutshell">
+                <img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=GB&ASIN=B087F7GKDQ&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=materialdesig-21" >
+            </a>
+            <img src="//ir-uk.amazon-adsystem.com/e/ir?t=materialdesig-21&l=am2&o=2&a=B087F7GKDQ" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+
+            <a target="_blank" href="https://geni.us/crackingcodeinterview">
+                <img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=GB&ASIN=0984782850&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=materialdesig-21" >
+            </a>
+            <img src="//ir-uk.amazon-adsystem.com/e/ir?t=materialdesig-21&l=am2&o=2&a=0984782850" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+
+            <a target="_blank"  href="https://geni.us/selftaughtprogrammer">
+                <img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=GB&ASIN=0999685902&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=materialdesig-21" >
+            </a>
+            <img src="//ir-uk.amazon-adsystem.com/e/ir?t=materialdesig-21&l=am2&o=2&a=0999685902" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+
+            <a target="_blank"  href="https://www.amazon.co.uk/gp/product/B086PRLDCB/ref=as_li_tl?ie=UTF8&camp=1634&creative=6738&creativeASIN=B086PRLDCB&linkCode=as2&tag=materialdesig-21&linkId=2a21d2806023296336fac2461e981c0d">
+                <img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=GB&ASIN=B086PRLDCB&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=materialdesig-21" >
+            </a>
+            <img src="//ir-uk.amazon-adsystem.com/e/ir?t=materialdesig-21&l=am2&o=2&a=B086PRLDCB" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+        </div>
+    </div>
     <div class="mdl-cell mdl-cell--12-col mdl-cell--8-col-tablet mdl-card mdl-shadow--4dp article-card">        
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text">GETTING STARTED</h2>                                    
